--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@meforma/vue-toaster": "^1.3.0",
+    "@popperjs/core": "^2.11.2",
+    "axios": "^0.26.0",
+    "bootstrap": "^4.6.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.1",
+    "vee-validate": "^4.5.9",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
+    "vue3-popper": "^1.4.1",
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
